# boundary-lab

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ath.msh  docker-compose.cloud.yml  enclosure.msh  pyproject.toml  userguideexample.txt
.github/workflows/: ci.yml
ath/: ath.cfg
docker/: build-beat-cuda-sysimage.jl  precompile-beat-cuda.jl  server-cuda-entrypoint.sh  server-cuda.Dockerfile
docs/: Boundary Lab Server.md  Docker.md  Inputs and Outputs.md  Model Assumptions.md  Symmetry Feature Plan.md  User Guide.md  ath-setup.md  cloud-solving.md  project-files.md  regular_far_pair_plan.md  user-guide.md
docs/advanced/: afterburner-bem-backend.md  beat-engine-CPU.md  beat-engine-CUDA.md  beat-engine-bem-backend.md  beat-engine-core.md  cli-workflow.md  examples.md  forward-beam-shape.md  julia-bem-backend.md  solver-configuration.md
examples/Ath+Mesh_2WayFreestanding/: 2wayfreestanding.blab.json  wooferenclosure.msh
examples/Ath+Mesh_2WayIntegrated/: 2wayintegrated.blab.json  2wayintegratedenclosure.msh
examples/Ath_2WayBookshelf/: Ath_2WayBookshelf.blab.json
examples/Ath_SingleSourceWaveguide/: singlesourcewaveguide.blab.json
examples/MultiAth+Mesh_3WayIntegrated/: 3WayIntegratedEnclosure.msh  3wayintegrated.blab.json
infra/aws/: README.md  iam.tf  main.tf  outputs.tf  variables.tf  (+1 more)
reference/: bemppsolver.py  format_visualizer_data.py  visualizer.py
results/: benchmark_cpu.json
samples/: README.md  ath14symmetrysample.msh  athcomplexsample.msh  enclosureexample.msh  multisource_example.msh  multisourceexample.cfg  sampleathscript.cfg  waveguideexample.msh
scripts/: benchmark_gui_pipeline.py  build_help_pdf.py
tests/: test_ath_live.py  test_balloon_hover.py  test_cli.py  test_cloud_api.py  test_cloud_bundle.py  test_cloud_events.py  test_cloud_launch.py  test_cloud_protocol.py  test_cloud_storage.py  test_cloud_worker.py  test_config.py  test_diagnostics_help.py  test_help_pdf_builder.py  test_main_window_mesh_workflow.py  test_mesh_clean.py  test_mesh_preview.py  test_postprocess_plotting.py  test_project_io.py  test_project_state.py  test_protocol.py  test_server.py  test_solver_backends.py  test_solver_helpers.py  test_spinorama.py  test_startup_checks.py  test_symmetry.py  test_ui_drag_drop.py  test_ui_plot_classes.py  test_ui_settings.py  test_ui_source_channel_config.py  test_version.py
(+139 files in other folders)
